<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/enter_password_fragment_bg"
    tools:context=".EnterPasswordFragment">

    <EditText
        android:id="@+id/password"
        android:layout_width="209dp"
        android:layout_height="64dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/app_purple"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:textColorHighlight="@color/app_purple"
        android:textColorHint="@color/text_color_hint"
        android:textColorLink="@color/app_purple"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="69dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="183dp"
        android:layout_height="103dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/app_purple"
            android:checked="false"
            android:text="@string/show"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="268dp" />

        <RadioButton
            android:id="@+id/radioButtonHide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/app_purple"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/hide"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="324dp" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="138dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/cat"
        android:src="@drawable/cat2"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>